[gd_scene load_steps=17 format=3 uid="uid://crgouuooivjcx"]

[ext_resource type="Script" uid="uid://d1dimny8ce7hl" path="res://scenes/player/player.gd" id="1_dral5"]
[ext_resource type="Texture2D" uid="uid://c7iamuksqxa85" path="res://assets/player/player.png" id="1_pywi1"]
[ext_resource type="PackedScene" uid="uid://olehg5pwvxbm" path="res://scenes/player_cam/player_cam.tscn" id="3_8bhr8"]
[ext_resource type="PackedScene" uid="uid://b5ri3m50smfki" path="res://scenes/shooter/shooter.tscn" id="4_8jvbt"]

[sub_resource type="Animation" id="Animation_kt6og"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_0clu0"]
resource_name = "fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_dsnu7"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_d8p8k"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_854a0"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_jiqm5"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vur7r"]
_data = {
&"RESET": SubResource("Animation_kt6og"),
&"fall": SubResource("Animation_0clu0"),
&"hurt": SubResource("Animation_dsnu7"),
&"idle": SubResource("Animation_d8p8k"),
&"jump": SubResource("Animation_854a0"),
&"run": SubResource("Animation_jiqm5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa0qh"]
size = Vector2(10, 21)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjnqe"]
radius = 6.0
height = 22.0

[sub_resource type="Animation" id="Animation_btyrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6u8u4"]
resource_name = "invincible"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3mlr"]
_data = {
&"RESET": SubResource("Animation_btyrk"),
&"invincible": SubResource("Animation_6u8u4")
}

[node name="Player" type="CharacterBody2D" groups=["Moveables", "Player"]]
collision_layer = 0
script = ExtResource("1_dral5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pywi1")
hframes = 19
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vur7r")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_xa0qh")

[node name="PlayerCam" parent="." instance=ExtResource("3_8bhr8")]

[node name="DebugLabel" type="Label" parent="."]
offset_left = -2.0
offset_top = -56.0
offset_right = 38.0
offset_bottom = 269.0
scale = Vector2(0.159, 0.159)
theme_override_font_sizes/font_size = 58
text = "a
b
c
d"

[node name="Shooter" parent="." instance=ExtResource("4_8jvbt")]
speed = 150.0
bullet_key = 2
shoot_delay = 0.35

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 6)
shape = SubResource("CapsuleShape2D_cjnqe")

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="InvinciblePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u3mlr")
}

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
